force-app/main/default/objects/Interest_Tag_Sync__c/Interest_Tag_Sync__c.object-meta.xml
<CustomObject>
    <label>Interest_Tag_Sync</label>
    <nameField>
        <displayFormat>ITS-{0000}</displayFormat>
        <label>Interest_Tag_Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest_Tag_Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>