force-app/main/default/objects/Interest_Tag_Sync__c/fields/Interest_Tag_Id__c.field-meta.xml
<CustomField>
    <fullName>Interest_Tag_Id__c</fullName>
    <externalId>true</externalId>
    <label>Interest Tag Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>