force-app/main/default/objects/Interest_Tag_Sync__c/fields/Is_Synced_to_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced_to_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synced to Picklist</label>
    <type>Checkbox</type>
</CustomField>