force-app/main/default/objects/Interest_Tag_Sync__c/fields/Tag_Description__c.field-meta.xml
<CustomField>
    <fullName>Tag_Description__c</fullName>
    <label>Tag Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>