force-app/main/default/objects/Interest_Tag_Sync__c/fields/Tag_Type__c.field-meta.xml
<CustomField>
    <fullName>Tag_Type__c</fullName>
    <label>Tag Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>