force-app/main/default/objects/Interest_Tag_Sync__c/fields/Workshops__c.field-meta.xml
<CustomField>
    <fullName>Workshops__c</fullName>
    <label>Workshops</label>
    <referenceTo>Workshop__c</referenceTo>
    <relationshipLabel>Interest Tag Syncs</relationshipLabel>
    <relationshipName>Interest_Tag_Syncs</relationshipName>
    <type>Lookup</type>
</CustomField> 